--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 .main-title {
-  margin-left: 8%;
+  margin-left: 11%;
   width: 80%;
   text-align: center;
 }
@@ -20,7 +20,14 @@
   margin-top: 20px;
   justify-content: center;
   width: 80%;
-  margin-left: 40%;
+  padding-left: 43%;
+}
+
+.separator {
+  margin-top: 40px;
+  background-color: black;
+  width: 30%;
+  height: 4px;
 }
 
 #Add-Book {
@@ -47,4 +54,15 @@ tr:nth-child(even) {
   background-color: #bbb6b6;
   justify-content: space-between;
   align-items: center;
+}
+
+tr:nth-child(odd) {
+  justify-content: space-between;
+  align-items: center;
+}
+
+li {
+  text-align: left;
+  width: 80%;
+  list-style: none;
 }
