--- a/style.css
+++ b/style.css
@@ -1,10 +1,6 @@
-body{
-  margin: 0px 5px;
-  overflow-x: hidden;
-}
 .main-title {
   margin-left: 11%;
-  width: 100%;
+  width: 80%;
   text-align: center;
 }
 
@@ -16,25 +12,30 @@ body{
   margin: auto;
   border-collapse: collapse;
   border-spacing: 0;
-  width: 100%;
+  width: 80%;
   border: 1px solid #ddd;
 }
 
 #Book-form {
-  margin: 165px 0px;
+  margin-top: 20px;
   justify-content: center;
-  width: 100%;
-  padding-left: 33%;
+  width: 80%;
+  padding-left: 43%;
+}
+
+.separator {
+  margin-top: 40px;
+  background-color: black;
+  width: 30%;
+  height: 4px;
 }
 
 #Add-Book {
   margin: 5px;
   padding: 5px;
-  width: 100px;
 }
 
 #Book-form input {
-  width: 30%;
   height: 25px;
   margin: 5px;
 }
@@ -54,58 +55,14 @@ tr:nth-child(even) {
   justify-content: space-between;
   align-items: center;
 }
+
 tr:nth-child(odd) {
   justify-content: space-between;
   align-items: center;
 }
 
-.table li {
+li {
   text-align: left;
-  width: 100%;
+  width: 80%;
   list-style: none;
-}
-
-.navbar{
-  border: 2px solid grey;
-  margin: auto;
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-}
-
-.navbar .nav-title{
-  font-weight: bold;
-  font-size: 18px;
-  padding: 0px 12px;
-}
-
-.navbar ul {
-  display: flex;
-  justify-content: space-between;
-}
-
-.navbar ul li{
-list-style: none;
-margin-right: 15px;
-}
-.navbar ul li a{
-  color: black;
-  text-decoration: none;
-  padding: 0px 12px;
-  font-size: 16px;
-}
-
-.line{
-  border-right:2px solid grey; 
-}
-
-
-
-
-
-.footer{
-  border: 2px solid grey;
-  /* font-weight: bold; */
-  font-size: 18px;
-  padding: 5px 12px;
 }
